	socklnd   - kernels up to 2.6.16
	qswlnd    - Qsnet kernel modules 5.20 and later
	openiblnd - IbGold 1.8.2
	o2iblnd   - OFED 1.1
	viblnd    - Voltaire ibhost 3.4.5 and later
	ciblnd    - Topspin 3.2.0
	iiblnd    - Infiniserv 3.3 + PathBits patch
	gmlnd     - GM 2.1.22 and later
	mxlnd     - MX 1.2.1 or later
	ptllnd    - Portals 3.3 / UNICOS/lc 1.5.x, 2.0.x
       * bug fixes

Severity   : major
Frequency  : rare	
Bugzilla   : 11616
Description: o2iblnd handle early RDMA_CM_EVENT_DISCONNECTED.
Details    : If the fabric is lossy, an RDMA_CM_EVENT_DISCONNECTED
	     callback can occur before a connection has actually been
	     established.  This caused an assertion failure previously.

Severity   : enhancement
Bugzilla   : 11094
Description: Multiple instances for o2iblnd
Details    : Allow multiple instances of o2iblnd to enable networking over
	     multiple HCAs and routing between them.

Severity   : major
Bugzilla   : 11201
Description: lnet deadlock in router_checker
Details    : turned ksnd_connd_lock, ksnd_reaper_lock, and ksock_net_t:ksnd_lock
	     into BH locks to eliminate potential deadlock caused by
	     ksocknal_data_ready() preempting code holding these locks.

Severity   : major
Bugzilla   : 11126
Description: Millions of failed socklnd connection attempts cause a very slow FS
Details    : added a new route flag ksnr_scheduled to distinguish from
	     ksnr_connecting, so that a peer connection request is only turned
	     down for race concerns when an active connection to the same peer
	     is under progress (instead of just being scheduled).

------------------------------------------------------------------------------

2007-02-09  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.4.9
       * Support for networks:
	socklnd   - kernels up to 2.6.16
	qswlnd    - Qsnet kernel modules 5.20 and later
	openiblnd - IbGold 1.8.2
	o2iblnd   - OFED 1.1
	viblnd    - Voltaire ibhost 3.4.5 and later
	ciblnd    - Topspin 3.2.0